cambiados pasos de formulario

--- a/public/css/form_registro_asociado.css
+++ b/public/css/form_registro_asociado.css
@@ -36,6 +36,7 @@
   font-size: 12px;
   line-height: 1.428571429;
   border-radius: 15px;
+  cursor: default !important;
 }
 .displayNone{
   display: none;
